# streak-system

./: .env.example  CONTRIBUTING.md  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
contracts/: Cargo.toml
contracts/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  main.rs
